--- a/WebResumen/Views/AutoClaveE/Print.cshtml
+++ b/WebResumen/Views/AutoClaveE/Print.cshtml
@@ -26,7 +26,7 @@
     }
     else
     {
-        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosE")">ImprimirAS</a>
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosE")">Imprimir</a>
 
     }
 
