--- a/WebResumen/Views/AutoClaveI/Print.cshtml
+++ b/WebResumen/Views/AutoClaveI/Print.cshtml
@@ -27,7 +27,7 @@
     else
     {
 
-        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosI")">ImprimirAS</a>
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosI")">Imprimir</a>
 
 
     }
