--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                     <span asp-validation-for="Contraseña" class="text-danger"></span>
                 </div>
                 <div class="col text-center">
-                    <button type="submit" class="btn btn-primary img-fluid animated fadeInUp">LOG IN</button>
+                    <button type="submit" class="btn btn-primary img-fluid animated fadeInUp">INICIAR SESIÓN</button>
                 </div>
             </form>
         </div>
