--- a/WebResumen/Views/MaestroAutoclave/Index.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Index.cshtml
@@ -79,7 +79,7 @@
                     </td>
                     <td>
                         @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
-                        <a type="button" class="btn btn-success btn-sm" asp-action="Login" asp-route-id="@item.Id">Edit</a>
+                        <a type="button" class="btn btn-success btn-sm" asp-action="Login" asp-route-id="@item.Id">Modificar</a>
                         @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
                         @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                             <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
