--- a/WebResumen/Views/AudiTrail/Index.cshtml
+++ b/WebResumen/Views/AudiTrail/Index.cshtml
@@ -41,12 +41,54 @@
                ng-model="searchText"
                ng-change="searchTable()" />*@
 
+    <table cellpadding="1" cellspacing="0" border="0" style="width: 45%; margin: 0 auto 2em auto;">
+        <thead class="thead-dark">
+            <tr>
+                <th hidden>Target</th>
+                <th hidden>Buscar</th>
+                <th hidden>Treat as regex</th>
+                <th hidden>Use smart search</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr id="filter_global">
+                <td>Busqueda Global</td>
+                <td align="center"><input type="text" class="global_filter" id="global_filter"></td>
+                <td align="center" hidden><input type="checkbox" class="global_filter" id="global_regex"></td>
+                <td align="center" hidden><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
+            </tr>
+           
+            <tr id="filter_col2" data-column="1">
+                <td>Usuario </td>
+                <td align="center"><input type="text" class="column_filter" id="col1_filter"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col1_regex"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
+            </tr>
+           
+            <tr id="filter_col5" data-column="4">
+                <td>Evento</td>
+                <td align="center"><input type="text" class="column_filter" id="col4_filter"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col4_regex"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
+            </tr>
+         
+
+            <tr>
+                <td>Intervalo Fecha : </td>
+                <td align="left"><input name="min" id="min" type="datetime-local" value=""><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="datetime-local" value=""><button onclick="javascript:max.value=''">X</button></td>
+
+            </tr>
+           
+
+        </tbody>
+    </table>
+
     <table id="example" datatable class="table table-striped table-bordered table-sm"
            dt-options="dtOptions"
            dt-columns="dtColumns"
            dt-instance="dtInstance">
         <thead class="thead-dark">
-            </thead>
+        </thead>
 
     </table>
 
