--- a/WebResumen/Views/AutoClaveB/Login.cshtml
+++ b/WebResumen/Views/AutoClaveB/Login.cshtml
@@ -56,7 +56,7 @@
                     <input asp-for="Dato" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")" type="hidden" />
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
