--- a/WebResumen/Views/AutoClaveC/Login.cshtml
+++ b/WebResumen/Views/AutoClaveC/Login.cshtml
@@ -54,7 +54,7 @@
 
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
