--- a/WebResumen/Views/AutoClaveD/Login.cshtml
+++ b/WebResumen/Views/AutoClaveD/Login.cshtml
@@ -52,7 +52,7 @@
 
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
