--- a/WebResumen/Views/AutoClaveD/Print.cshtml
+++ b/WebResumen/Views/AutoClaveD/Print.cshtml
@@ -25,7 +25,7 @@
     }
     else
     {
-        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosD")">ImprimirAS</a>
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosD")">Imprimir</a>
 
     }
 
