--- a/WebResumen/Views/AutoClaveF/Login.cshtml
+++ b/WebResumen/Views/AutoClaveF/Login.cshtml
@@ -53,7 +53,7 @@
 
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
