--- a/WebResumen/Views/AutoClaveF/Print.cshtml
+++ b/WebResumen/Views/AutoClaveF/Print.cshtml
@@ -27,7 +27,7 @@
     }
     else
     {
-        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosF")">ImprimirAS</a>
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosF")">Imprimir</a>
 
 
     }
