--- a/WebResumen/Views/AutoClaveG/Print.cshtml
+++ b/WebResumen/Views/AutoClaveG/Print.cshtml
@@ -25,7 +25,7 @@
     }
     else
     {
-        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosG")">ImprimirAS</a>
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosG")">Imprimir</a>
 
 
     }
