--- a/WebResumen/Views/AutoClaveJ/Print.cshtml
+++ b/WebResumen/Views/AutoClaveJ/Print.cshtml
@@ -28,7 +28,7 @@
     else
     {
 
-        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosJ")">ImprimirAS</a>
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosJ")">Imprimir</a>
 
 
     }
