--- a/WebResumen/Views/AutoClaveK/Login.cshtml
+++ b/WebResumen/Views/AutoClaveK/Login.cshtml
@@ -52,7 +52,7 @@
                     <input asp-for="Dato" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosK")" type="hidden" />
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
