--- a/WebResumen/Views/MaestroAutoclaveSup/Login.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Login.cshtml
@@ -61,7 +61,7 @@
 
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
