--- a/WebResumen/Views/Parametro/Login.cshtml
+++ b/WebResumen/Views/Parametro/Login.cshtml
@@ -66,7 +66,7 @@
 
 
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Acceder</button>
 
             </form>
         </div>
