--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                         @inject IHttpContextAccessor httpContextAccessor
                         @if (string.IsNullOrEmpty(@httpContextAccessor.HttpContext.Session.GetString("SessionUser")))
                         {
-                            Context.Response.Redirect("/Home");
+                            Context.Response.Redirect("/Home/LogoutEmpty");
                         }
                         else
                         {
@@ -76,8 +76,8 @@
 
 
                             @*<li class="nav-item">
-                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                                </li>*@
+                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>*@
                             else
                             {
 
@@ -134,10 +134,10 @@
 
 
 
-            <ul class="navbar-nav ml-auto">
+            <ul class="nav nav-pills">
 
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                    <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Logout"><i class="fas fa-sign-out-alt"></i>Cerrar sesión</a>
                 </li>
                 <li class="nav-item">
                     @*<p class="float-right navbar-text navbar-right text-danger">Hola, <strong>@User.Identity.Name.Replace("GLOBAL\\", "")!</strong> </p>*@
