Se añade BaseURL para JS , se modifican 2 rutas en layout y se retorna archiva log en cada controlador de autoclave

--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -179,10 +179,10 @@
     <script src="~/js/TimeOut/TimeOut.js"></script>
 
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="/lib/MDB/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/lib/MDB/js/bootstrap.min.js"></script>  @*cambiado*@
 
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="/lib/MDB/js/mdb.min.js"></script>
+    <script type="text/javascript" src="~/lib/MDB/js/mdb.min.js"></script> @*cambiado*@
     <script type="text/javascript" src="~/lib/MDB/js/addons/datatables.min.js"></script>
     <script type="text/javascript" src="~/lib/DataTables/datatables.min.js"></script>
 
