Se añade paginacion y filtro para cada autoclave-se limita impresion ciclo 70---se quita la validacion de ontraseña-se valida modelo ip y otros-se modifican vistas de autoclaves para reflexion -en vapor se muestra nueva columna pff2-se modifica impresiones para 2 paginas cuando tiene mas de 25 errores acumulados par todos los ciclos impresion directa y web-se añade en el startup la reflexion

--- a/WebResumen/Views/AutoClaveB/Index.cshtml
+++ b/WebResumen/Views/AutoClaveB/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
+﻿@*@model IEnumerable<WebResumen.Models.CiclosAutoclaves>*@
+@model ReflectionIT.Mvc.Paging.PagingList<WebResumen.Models.CiclosAutoclaves>
+@using ReflectionIT.Mvc.Paging
+@addTagHelper *, ReflectionIT.Mvc.Paging
 
 @{
     ViewData["Title"] = "Index";
@@ -32,7 +35,7 @@
         <form>
             Buscar por Nº Ciclo: @Html.TextBox("nCiclo")
             Buscar por Nº Programa: @Html.TextBox("nPrograma")
-           
+
 
             <input type="submit" value="Buscar" />
         </form>
@@ -46,14 +49,14 @@
     <table class="table table-responsive-sm">
         <thead class="thead-dark">
             <tr>
-              
+
                 <th>
                     @Html.DisplayNameFor(model => model.NumeroCiclo)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Programa)
                 </th>
-              
+
                 <th>
                     @Html.DisplayNameFor(model => model.HoraInicio)
                 </th>
@@ -64,7 +67,7 @@
                 <th>
                     Acciones
                 </th>
-             
+
 
             </tr>
         </thead>
@@ -72,14 +75,14 @@
             @foreach (var item in Model)
             {
                 <tr>
-                   
+
                     <td>
                         @Html.DisplayFor(modelItem => item.NumeroCiclo)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Programa)
                     </td>
-                  
+
                     <td>
                         @Html.DisplayFor(modelItem => item.HoraInicio)
                     </td>
@@ -88,12 +91,12 @@
                     </td>
 
 
-                 
+
                     <td>
-                       
+
                         <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Ver</a>
                         <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Imprimir</a>
-                   
+
 
 
                     </td>
@@ -102,3 +105,8 @@
         </tbody>
     </table>
 </div>
+
+ Página @(Model.PageCount < Model.PageIndex ? 0 : Model.PageIndex) de @Model.PageCount  Total Registros: @Model.TotalRecordCount
+<nav aria-label="Suppliers navigation example">
+    <vc:pager paging-list="@Model" />
+</nav>
