--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -55,7 +55,7 @@
 
     <body ng-app="datatablesAguaApp" ng-controller="aguaCtrl as tagapp">
 
-
+        <h2>Autoclaves Agua</h2>
 
         <table cellpadding="1" cellspacing="0" border="0" style="width: 45%; margin: 0 auto 2em auto;">
             <thead class="thead-dark">
