--- a/WebResumen/Views/AutoClaveA/Index.cshtml
+++ b/WebResumen/Views/AutoClaveA/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
+﻿@*@model IEnumerable<WebResumen.Models.CiclosAutoclaves>*@
+@model ReflectionIT.Mvc.Paging.PagingList<WebResumen.Models.CiclosAutoclaves>
+@using ReflectionIT.Mvc.Paging
+@addTagHelper *, ReflectionIT.Mvc.Paging
 
 @{
     ViewData["Title"] = "Index";
@@ -6,23 +9,12 @@
 
 <h1>NF8387A </h1>
 
-@*<h1>@ViewBag.expiry</h1>*@
+
 
 @if (TempData["Print"] != null)
 {
 
-
-
-    @*<button type="button" onclick="printJS({printable:'docs/archivo.pdf', type:'pdf', showModal:true})">
-            Imprima aquí!
-        </button>*@
-
-    @*<body onload=" printJS({printable:'docs/archivo.pdf', type:'pdf', showModal:true})">
-
-        </body>*@
-
-
-    @*<script src="~/js/printActive.js" asp-append-version="true"></script>*@
+    
 
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>@TempData["Print"].ToString()!</strong>
@@ -61,15 +53,7 @@
         <table class="table table-responsive-sm">
             <thead class="thead-dark">
                 <tr>
-                    @*<th>
-            @Html.DisplayNameFor(model => model.IdAutoclave)
-        </th>*@
-                    @*<th>
-            @Html.DisplayNameFor(model => model.IdSeccion)
-        </th>*@
-                    @*<th>
-            @Html.DisplayNameFor(model => model.Tinicio)
-        </th>*@
+                   
                     <th>
                         @Html.DisplayNameFor(model => model.NumeroCiclo)
                     </th>
@@ -77,156 +61,7 @@
                         @Html.DisplayNameFor(model => model.Programa)
                     </th>
 
-                    @*<th>
-            @Html.DisplayNameFor(model => model.Modelo)
-        </th>*@
-                    @*<th>
-            @Html.DisplayNameFor(model => model.Programador)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Operador)
-        </th>*@
-                    @*<th>
-            @Html.DisplayNameFor(model => model.CodigoProducto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Lote)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notas)
-        </th>*@
-                    @*<th>
-            @Html.DisplayNameFor(model => model.IdUsuario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase3)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF3)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase4)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF4)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase5)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF5)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tif5)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TisubF5)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tff5)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TfsubF5)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase6)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF6)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tif6)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TisubF6)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tff6)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TfsubF6)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase7)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF7)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tif7)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TisubF7)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase8)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF8)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tif8)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TisubF8)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tff8)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase9)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF9)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tif9)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TisubF9)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tff9)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase10)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF10)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase11)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF11)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase12)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotalF12)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fase13)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tff13)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TfsubF13)
-        </th>*@
+                    
                     <th>
                         @Html.DisplayNameFor(model => model.HoraInicio)
                     </th>
@@ -236,39 +71,7 @@
                     <th>
                         Acciones
                     </th>
-                    @*<th>
-            @Html.DisplayNameFor(model => model.EsterilizacionN)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tminima)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tmaxima)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DuracionTotal)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FtzMin)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FtzMax)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DifMaxMin)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AperturaPuerta)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TiempoCiclo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ErrorCiclo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </th>*@
+                    
 
                 </tr>
             </thead>
@@ -276,223 +79,26 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.IdAutoclave)
-                            </td>*@
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.IdSeccion)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tinicio)
-                            </td>*@
+                        
                         <td>
                             @Html.DisplayFor(modelItem => item.NumeroCiclo)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Programa)
                         </td>
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.Modelo)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Programador)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Operador)
-                            </td>*@
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.CodigoProducto)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Lote)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Notas)
-                            </td>*@
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.IdUsuario)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase1)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF1)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase2)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF2)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase3)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF3)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase4)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF4)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase5)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF5)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tif5)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TisubF5)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tff5)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TfsubF5)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase6)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF6)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tif6)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TisubF6)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tff6)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TfsubF6)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase7)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF7)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tif7)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TisubF7)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase8)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF8)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tif8)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TisubF8)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tff8)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase9)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF9)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tif9)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TisubF9)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tff9)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase10)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF10)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase11)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF11)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase12)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotalF12)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fase13)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tff13)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TfsubF13)
-                            </td>*@
+                       
                         <td>
                             @Html.DisplayFor(modelItem => item.HoraInicio)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.HoraFin)
                         </td>
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.EsterilizacionN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tminima)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tmaxima)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DuracionTotal)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FtzMin)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FtzMax)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DifMaxMin)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.AperturaPuerta)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TiempoCiclo)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ErrorCiclo)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FechaRegistro)
-                            </td>*@
+                        
                         <td>
-                            @*@using Microsoft.AspNetCore.Authorization
-                                @inject IAuthorizationService AuthorizationService
-                                @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
-                                {*@
+                         
                             <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Ver</a>
                             <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Imprimir</a>
-                            @*}*@
-                            @*else
-                                {
-                                    <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Vista</a>
-                                    <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">PrintS</a>
-                                }*@
+                           
 
 
 
@@ -503,7 +109,10 @@
         </table>
     </div>
 
-
+    Página @(Model.PageCount < Model.PageIndex ? 0 : Model.PageIndex) de @Model.PageCount  Total Registros: @Model.TotalRecordCount
+    <nav aria-label="Suppliers navigation example">
+        <vc:pager paging-list="@Model" />
+    </nav>
 
 
 
