--- a/WebResumen/Views/AutoClaveG/Index.cshtml
+++ b/WebResumen/Views/AutoClaveG/Index.cshtml
@@ -1,4 +1,11 @@
-﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
+﻿@*@model IEnumerable<WebResumen.Models.CiclosAutoclaves>*@
+
+@model ReflectionIT.Mvc.Paging.PagingList<WebResumen.Models.CiclosAutoclaves>
+@using ReflectionIT.Mvc.Paging
+@addTagHelper *, ReflectionIT.Mvc.Paging
+
+
+
 
 @{
     ViewData["Title"] = "Index";
@@ -7,6 +14,8 @@
 <h1>
     NF1031G
 </h1>
+
+
 
 <p>
     @*<a asp-action="Create">Create New</a>*@
@@ -45,24 +54,28 @@
     <table class="table table-responsive-sm">
         <thead class="thead-dark">
             <tr>
-              
+
                 <th>
                     @Html.DisplayNameFor(model => model.NumeroCiclo)
+                    @*NumeroCiclo*@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Programa)
+                    @*Programa*@
                 </th>
-              
+
                 <th>
                     @Html.DisplayNameFor(model => model.HoraInicio)
+                    @*HoraInicio*@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.HoraFin)
+                    @*HoraFin*@
                 </th>
                 <th>
                     Acciones
                 </th>
-               
+
                 <th></th>
             </tr>
         </thead>
@@ -70,29 +83,47 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    
+
                     <td>
                         @Html.DisplayFor(modelItem => item.NumeroCiclo)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Programa)
                     </td>
-                   
+
                     <td>
                         @Html.DisplayFor(modelItem => item.HoraInicio)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.HoraFin)
                     </td>
-                    
+
                     <td>
-                        
+
                         <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Ver</a>
                         <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Imprimir</a>
-                       
+
                     </td>
                 </tr>
+
             }
         </tbody>
     </table>
+
 </div>
+ Página @(Model.PageCount < Model.PageIndex ? 0 : Model.PageIndex) de @Model.PageCount  Total Registros: @Model.TotalRecordCount
+<nav aria-label="Suppliers navigation example">
+    <vc:pager paging-list="@Model" />
+</nav>
+
+
+
+
+@*<nav aria-label="Suppliers navigation example">
+        @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
+    </nav>*@
+
+
+
+
+
