--- a/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
@@ -7,7 +7,7 @@
 
 <body ng-app="datatablesVaporApp" ng-controller="vaporCtrl as tagapp">
 
-
+    <h2>Autoclaves Vapor</h2>
     <table cellpadding="1" cellspacing="0" border="0" style="width: 45%; margin: 0 auto 2em auto;">
         <thead>
             <tr>
@@ -22,56 +22,56 @@
                 <td>Busqueda Global</td>
                 <td align="center"><input type="text" class="global_filter" id="global_filter"></td>
                 <td align="center" hidden><input type="checkbox" class="global_filter" id="global_regex"></td>
-                <td align="center"hidden><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
+                <td align="center" hidden><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
             </tr>
             @*<tr id="filter_col1" data-column="0">
-            <td>Column - Id</td>
-            <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
-        </tr>*@
+                    <td>Column - Id</td>
+                    <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
+                </tr>*@
             <tr id="filter_col2" data-column="1">
                 <td>IdAutoclave </td>
                 <td align="center"><input type="text" class="column_filter" id="col1_filter"></td>
                 <td align="center" hidden><input type="checkbox" class="column_filter" id="col1_regex"></td>
-                <td align="center"hidden><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
             </tr>
             @*<tr id="filter_col3" data-column="2">
-            <td>Carro</td>
-            <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
-        </tr>*@
+                    <td>Carro</td>
+                    <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
+                </tr>*@
             <tr id="filter_col4" data-column="3">
                 <td>N Progresivo</td>
                 <td align="center"><input type="text" class="column_filter" id="col3_filter"></td>
-                <td align="center"hidden><input type="checkbox" class="column_filter" id="col3_regex"></td>
-                <td align="center"hidden><input type="checkbox" class="column_filter" id="col3_smart" checked="checked"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col3_regex"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col3_smart" checked="checked"></td>
             </tr>
             <tr id="filter_col5" data-column="4">
                 <td>Programa</td>
                 <td align="center"><input type="text" class="column_filter" id="col4_filter"></td>
-                <td align="center"hidden><input type="checkbox" class="column_filter" id="col4_regex"></td>
-                <td align="center"hidden><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col4_regex"></td>
+                <td align="center" hidden><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
             </tr>
             @*<tr id="filter_col6" data-column="5">
-            <td>Cod.Producto</td>
-            <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
-        </tr>*@
+                    <td>Cod.Producto</td>
+                    <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
+                </tr>*@
             @*<tr id="filter_col8" data-column="7">
-            <td>Hora Inicio</td>
-            <td align="center"><input type="text" class="column_filter" id="col7_filter"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
-        </tr>
-        <tr id="filter_col9" data-column="8">
-            <td>Hora Fin</td>
-            <td align="center"><input type="datetime" class="column_filter" id="col8_filter"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
-            <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
-        </tr>*@
+                    <td>Hora Inicio</td>
+                    <td align="center"><input type="text" class="column_filter" id="col7_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
+                </tr>
+                <tr id="filter_col9" data-column="8">
+                    <td>Hora Fin</td>
+                    <td align="center"><input type="datetime" class="column_filter" id="col8_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
+                </tr>*@
             <tr>
                 <td>Intervalo Fecha Inicio: </td>
                 <td align="left"><input name="min" id="min" type="datetime-local"><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="datetime-local"><button onclick="javascript:max.value=''">X</button></td>
